--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ReactLearn",
+  "name": "Reactlearn",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -49,6 +49,7 @@
     "antd": "^4.21.2",
     "axios": "^0.27.2",
     "braces": "2.3.1",
+    "classnames": "^2.3.1",
     "cookie_js": "^1.4.2",
     "date-fns": "^2.28.0",
     "http-server": "^14.1.1",
