--- a/.eslintrc
+++ b/.eslintrc
@@ -32,6 +32,7 @@
   ],
   "parser": "@babel/eslint-parser",
   "rules": {
+    "import/prefer-default-export": "off",
     "no-console": "off", //"error"
     "linebreak-style": [0, "unix"],
     "operator-linebreak": "off",
