--- a/package.json
+++ b/package.json
@@ -46,12 +46,14 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
     "antd": "^4.21.2",
     "axios": "^0.27.2",
     "braces": "2.3.1",
     "classnames": "^2.3.1",
     "cookie_js": "^1.4.2",
     "date-fns": "^2.28.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "http-server": "^14.1.1",
     "lodash.debounce": "^4.0.8",
     "node-sass": "6.0.1",
